k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: deepskyn
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080   # access at 192.168.32.128:30080
